hphp/hack/test/typecheck/tconst/cannot_override_tconst.php
<?hh

class ParentClass {
  const type ID = arraykey;
}

class Child extends ParentClass {
  const type ID = int;
}
